syntax = "proto3";
package shentu.gov.v1alpha1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/gov/v1beta1/gov.proto";
import "cosmos_proto/cosmos.proto";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/shentufoundation/shentu/x/gov/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = false;
option (gogoproto.goproto_getters_all) = false;

// DepositParams defines the params for deposits on governance proposals.
message DepositParams {
  //  Minimum initial deposit for a proposal to enter voting period.
  repeated cosmos.base.v1beta1.Coin min_initial_deposit = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"min_initial_deposit\"",
    (gogoproto.jsontag) = "min_initial_deposit,omitempty"
  ];

  // Minimum deposit for a proposal to enter voting period.
  repeated cosmos.base.v1beta1.Coin min_deposit = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"min_deposit\"",
    (gogoproto.jsontag) = "min_deposit,omitempty"
  ];

  //  Maximum period for CTK holders to deposit on a proposal. Initial value: 2
  //  months.
  google.protobuf.Duration max_deposit_period = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "max_deposit_period,omitempty",
    (gogoproto.moretags) = "yaml:\"max_deposit_period\""
  ];
}

// TallyParams defines the params for tallying votes on governance proposals.
message TallyParams {
  cosmos.gov.v1beta1.TallyParams default_tally = 1;
  cosmos.gov.v1beta1.TallyParams certifier_update_security_vote_tally = 2;
  cosmos.gov.v1beta1.TallyParams certifier_update_stake_vote_tally = 3;
}

message Proposal {
  option (gogoproto.equal) = true;

  google.protobuf.Any content = 1 [(cosmos_proto.accepts_interface) = "Content"];
  uint64              proposal_id = 2 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
  ProposalStatus      status = 3 [(gogoproto.moretags) = "yaml:\"proposal_status\""];
  bool is_proposer_council_member = 4 [(gogoproto.moretags) = "yaml:\"is_proposer_council_member\""];
  string proposer_address = 5 [(gogoproto.moretags) = "yaml:\"proposer_address\""];
  cosmos.gov.v1beta1.TallyResult         final_tally_result = 6
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"final_tally_result\""];
  google.protobuf.Timestamp submit_time = 7
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"submit_time\""];
  google.protobuf.Timestamp deposit_end_time = 8
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"deposit_end_time\""];
  repeated cosmos.base.v1beta1.Coin total_deposit = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"total_deposit\""
  ];
  google.protobuf.Timestamp voting_start_time = 10
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_start_time\""];
  google.protobuf.Timestamp voting_end_time = 11
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_end_time\""];
}

// ProposalStatus enumerates the valid statuses of a proposal.
enum ProposalStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // PROPOSAL_STATUS_UNSPECIFIED defines the default propopsal status.
  PROPOSAL_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "StatusNil"];
  // PROPOSAL_STATUS_DEPOSIT_PERIOD defines a proposal status during the deposit
  // period.
  PROPOSAL_STATUS_DEPOSIT_PERIOD = 1 [(gogoproto.enumvalue_customname) = "StatusDepositPeriod"];
  // PROPOSAL_STATUS_VOTING_PERIOD defines a certifier voting period status.
  PROPOSAL_STATUS_CERTIFIER_VOTING_PERIOD = 2 [(gogoproto.enumvalue_customname) = "StatusCertifierVotingPeriod"];
  // PROPOSAL_STATUS_VOTING_PERIOD defines a validator voting period status.
  PROPOSAL_STATUS_VALIDATOR_VOTING_PERIOD = 3 [(gogoproto.enumvalue_customname) = "StatusValidatorVotingPeriod"];
  // PROPOSAL_STATUS_PASSED defines a proposal status of a proposal that has
  // passed.
  PROPOSAL_STATUS_PASSED = 4 [(gogoproto.enumvalue_customname) = "StatusPassed"];
  // PROPOSAL_STATUS_REJECTED defines a proposal status of a proposal that has
  // been rejected.
  PROPOSAL_STATUS_REJECTED = 5 [(gogoproto.enumvalue_customname) = "StatusRejected"];
  // PROPOSAL_STATUS_FAILED defines a proposal status of a proposal that has
  // failed.
  PROPOSAL_STATUS_FAILED = 6 [(gogoproto.enumvalue_customname) = "StatusFailed"];
}
